--- a/index.html
+++ b/index.html
@@ -7,11 +7,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="nav">
+    <!-- <nav class="nav">
         <div class="container">
-            
+            <h1 class="logo"><a href="/index.html">My Website</a></h1>
+            <ul>
+                <li><a href="" class="active">home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
         </div>
-    </nav>
+    </nav> -->
+    <div class="hero">
+        <div class="container">
+            <h1>Welcome  to My Website!</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, eligendi!</p>
+        </div>
+    </div>
+    <section class="container content">
+        <h2>Content one</h2>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nisi, tempore obcaecati quae facere amet deserunt expedita officiis placeat ipsam assumenda itaque, eum debitis fuga? Hic voluptates eius numquam minus sequi aliquid perspiciatis reprehenderit vero, fugiat odit molestiae ab vitae porro quod placeat et non harum architecto minima possimus expedita nobis reiciendis. Cupiditate harum dolore voluptates quasi veritatis iusto numquam quaerat animi, quibusdam incidunt quia beatae labore asperiores inventore excepturi magnam. Impedit nisi soluta, illum repudiandae beatae est dicta blanditiis sapiente et debitis ratione suscipit accusantium dignissimos pariatur veritatis dolor laborum omnis corrupti? Laborum nobis, placeat blanditiis optio in quod. </p>
+        <h3>Content Two</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, minima dolorem! Accusamus est quisquam nobis? Tempora magnam laboriosam aut adipisci autem numquam tempore quod! Ad perspiciatis magni reiciendis minus repellendus molestiae odio eos alias suscipit aut possimus, quas saepe? Voluptatum ad libero rem possimus sit, incidunt praesentium? Cum, quae incidunt doloribus maxime impedit a minus officiis assumenda necessitatibus voluptatibus modi eius obcaecati velit magnam provident ea, asperiores beatae sapiente odio. Eaque blanditiis eligendi, pariatur molestias error exercitationem autem inventore. Aliquid voluptate iusto distinctio quas culpa laboriosam eius autem, aliquam blanditiis architecto obcaecati ab atque. Consequuntur id enim numquam saepe obcaecati. </p>
+
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
